Add release notes and icon to office365bussines pacakge

--- a/skypeforbusinessbasic/skypeforbusiness.nuspec
+++ b/skypeforbusinessbasic/skypeforbusiness.nuspec
@@ -3,7 +3,7 @@
     <metadata>
         <id>SkypeForBusinessBasic</id>
         <version>16.0.7466.2038</version>
-        <title>SkypeForBusinessBasic</title>
+        <title>Skype for Business Basic</title>
         <authors>Microsoft</authors>
         <owners>jordigg</owners>
         <licenseUrl>http://windows.microsoft.com/en-us/windows-live/microsoft-services-agreement</licenseUrl>
