--- a/office365business/office365business.nuspec
+++ b/office365business/office365business.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Office365Business</id>
-        <version>16.0.7213.5776</version>
+        <version>16.0.7614.3602</version>
         <title>Office365Business</title>
         <authors>Microsoft</authors>
         <owners>cadenreiman jordigg</owners>
@@ -11,9 +11,10 @@
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>Get the latest versions of your familiar Office programs, such as Word, Excel and PowerPoint, and more, all in one convenient subscription. This will download and silently install the entire Office 365 2016 Business Retail edition. A license is required and you will be prompted to enter your account information upon first launching the software after install.</description>
         <summary>Office365Business</summary>
-        <packageSourceUrl>https://github.com/jordigg/chocolatey-officebusiness/office365business</packageSourceUrl>
-		<releaseNotes />
-        <tags>Office365Business Office 365 Bussines</tags>
+        <packageSourceUrl>https://github.com/jordigg/chocolatey-officebusiness/tree/master/office365business</packageSourceUrl>
+		<iconUrl>https://github.com/mwrock/Chocolatey-Packages/raw/master/Office2013ProPlusPreview/office.PNG</iconUrl>
+		<releaseNotes>Updated to latest version</releaseNotes>
+        <tags>Office365Business Office 365 Bussines admin</tags>
     </metadata>
     <files>
         <file src="tools\**" target="tools" />
