--- a/skypeforbusinessbasic/skypeforbusiness.nuspec
+++ b/skypeforbusinessbasic/skypeforbusiness.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>SkypeForBusinessBasic</id>
-        <version>16.0.78702024</version>
+        <version>16.0.8229.2086</version>
         <title>Skype for Business Basic</title>
         <authors>Microsoft</authors>
         <owners>jordigg</owners>
