--- a/skypeforbusiness/skypeforbusiness.nuspec
+++ b/skypeforbusiness/skypeforbusiness.nuspec
@@ -3,7 +3,7 @@
     <metadata>
         <id>SkypeForBusiness</id>
         <version>16.0.8229.2086</version>
-        <title>SkypeForBusiness</title>
+        <title>Skype For Business</title>
         <authors>Microsoft</authors>
         <owners>cadenreiman jordigg</owners>
         <licenseUrl>http://windows.microsoft.com/en-us/windows-live/microsoft-services-agreement</licenseUrl>
@@ -14,6 +14,7 @@
         <packageSourceUrl>https://github.com/jordigg/chocolatey-officebusiness/skypeforbusiness</packageSourceUrl>
 		<releaseNotes />
         <tags>SkypeForBusiness Office 365 Bussines Skype</tags>
+        <iconUrl>https://cdn.rawgit.com/jordigg/chocolatey-officebusiness/master/icons/SkypeForBusiness.png</iconUrl>
     </metadata>
     <files>
         <file src="tools\**" target="tools" />
