--- a/office365business/office365business.nuspec
+++ b/office365business/office365business.nuspec
@@ -13,24 +13,22 @@
 
 Microsoft 365 (formerly Office 365) is a line of subscription services offered by Microsoft as part of the Microsoft Office product line. The brand encompasses plans that allow use of the Microsoft Office software suite over the life of the subscription, as well as cloud-based software as a service products for business environments, such as hosted Exchange Server, Skype for Business Server, and SharePoint, among others. All Microsoft 365 plans include automatic updates to their respective software at no additional charge, as opposed to conventional licenses for these programs—where new versions require purchase of a new license.
 
-This package installs the [Microsoft 365 Business Retail](https://www.microsoft.com/en-us/microsoft-365/business/microsoft-365-apps-for-business) edition with the language and architecture (32/64 bits) matching the device if not specified oterhwise on the parameters.
+This package installs the [Microsoft 365 Business Retail](https://www.microsoft.com/en-us/microsoft-365/business/microsoft-365-apps-for-business) edition with the language and architecture (32/64 bits) matching the device if not specified otherwise on the parameters.
 
 ## Note
 
-- This installer *will uninstall any other Office packages installed* prior to installing this one to avoid possible errors during isntallation.
-- If you want to force the 32bit version on a 64bit Windows, use the choco `--forcex86` parameter when intalling the package.
+- This installer *will uninstall any other Office packages installed* prior to installing this one to avoid possible errors during installation.
+- If you want to force the 32bit version on a 64bit Windows, use the choco `--forcex86` parameter when installing the package.
 
 ## Package installation defaults
 
 By default, **installation** of this package:
 
-- Will uninstall other Microsoft 365 pacakges present on the device.
+- Will uninstall other Microsoft 365 packages present on the device.
 - Will install with the matching the language of the operating system.
 - Will install the [Microsoft 365 Business Retail](https://www.microsoft.com/en-us/microsoft-365/business/microsoft-365-apps-for-business) product with all the default apps if not specified otherwise as a parameter.
 - Will set the [release channel](https://docs.microsoft.com/en-gb/deployoffice/overview-update-channels) to `Current`.
 - Will enable auto-updates.
-
-https://docs.microsoft.com/en-gb/deployoffice/office-deployment-tool-configuration-options#channel-attribute-part-of-add-element
 
 ## Package Parameters
 
@@ -43,13 +41,13 @@ https://docs.microsoft.com/en-gb/deployoffice/office-deployment-tool-configurati
 
 ## Installation
 
-installation without parameters with default values.
+Installation without parameters with default values.
 
 ```ps1
 choco install office365business
 ```
 
-installation with parameters. Will select Microsoft 365 Home Premium retail edition in 32bits, only install Excel, Powerpoint and Word in French with updates disabled and EULA not accepted automatically.
+Installation with parameters. Will select Microsoft 365 Home Premium retail edition in 32bits, only install Excel, Powerpoint and Word in French with updates disabled and EULA not accepted automatically.
 
 ```powershell
  choco install office365business --forcex86 --params="/productid:O365HomePremRetail" /exclude:"Access Groove Lync OneDrive OneNote Outlook Publisher" /language:"fr-FR" /updates:"FALSE" /eula:"FALSE"
@@ -57,7 +55,7 @@ installation with parameters. Will select Microsoft 365 Home Premium retail edit
 
 ## Disclaimer
 
-These Chocolatey Packages only contain installation routines. The software itself is downloaded from the official sources of the software developer. The mantainers of this package have no affilation with the software developer.
+These Chocolatey Packages only contain installation routines. The software itself is downloaded from the official sources of the software developer. The maintainers of this package have no affiliation with the software developer.
 
 ## Author
 
